@@ -1,0 +1,20 @@
+EDITING DELEGATE: shouldChangeSelectedDOMRange:(null) toDOMRange:range from 0 of DIV > DIV > BODY > HTML > #document to 0 of DIV > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE
+EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
+EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 0 of DIV > DIV > BODY > HTML > #document to 0 of DIV > DIV > BODY > HTML > #document toDOMRange:range from 1 of #text > DIV > BODY > HTML > #document to 1 of #text > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE
+EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 784x18
+        RenderText {TEXT} at (0,0) size 746x18
+          text run at (0,0) width 746: "Mousing over the yellow square below should not cause an assertion failure or crash. This tests for regressions against "
+        RenderInline {A} at (0,0) size 32x18 [color=#0000EE]
+          RenderText {TEXT} at (746,0) size 32x18
+            text run at (746,0) width 32: "6931"
+        RenderText {TEXT} at (778,0) size 4x18
+          text run at (778,0) width 4: "."
+layer at (50,50) size 200x200
+  RenderBlock (positioned) zI: 1 {DIV} at (50,50) size 200x200 [bgcolor=#FFFF00]
+caret: position 1 of child 2 {TEXT} of child 1 {DIV} of child 1 {BODY} of child 0 {HTML} of document
